# compiler

./: .gitignore  LANGUAGE.md  README.md  allbits.txt  fib.txt  memory_allocator.txt  plan.md  pyproject.toml  safe_hardware.txt  sample-ir.txt  target.txt
examples/: README.md
examples/cpu/: CPU_PROGRAMS.md  const42_main.txt  iter_fib_11.txt  max2_demo.txt  pow2_loop.txt  safe_hardware.txt  sub_demo_40_17.txt  sum_evens_10.txt  sum_to_12.txt
examples/language/: allbits.txt  fib.txt  fib3.txt  fib5.txt  load_store_demo.txt  mutation_test.txt  sample.txt  test.txt
src/: main.py
src/compiler/: ast_nodes.py  cli.py  generation.py  interpreter.py  ir.py  lexer.py  liveness.py  lowering.py  main.py  opcode.py  parser.py  processing.py  rolling.py  tokens.py
tests/: test_interpreter.py  test_ir.py  test_lexer.py  test_parser.py
